# Skytran-6DOF

./: .clang-format  .clang-tidy  .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  README.txt  convert.py  data_3.csv  pyproject.toml  recieve.py  stewart_controller.py  stewart_test.py
lib/: nfd.lib
scripts/: convert.py  create_csv.py  create_csv_2.py  recieve.py  run_csv.py  send.py  stewart_controller.py  stewart_test.py
src/: main.cpp
